--- a/content/bleaching2.qmd
+++ b/content/bleaching2.qmd
@@ -93,7 +93,6 @@ summary(plob.glm)
 Anova(plob.glm, type = "III")
 ```
 
-
 #### https://www.rpubs.com/daharo_calpoly/502695
 
 ```{r}
@@ -1940,9 +1939,7 @@ rpn_cca_2015.ggbarplot
 rpn_crw <- read_delim('rpn_crw.txt', delim = " ")
 ```
 
-#```{r}
-#rpn_crw.main <- write_csv(rpn_crw, 'rpn_crw.csv')
-#```
+\#`{r} #rpn_crw.main <- write_csv(rpn_crw, 'rpn_crw.csv') #`
 
 ```{r}
 rpn_crw.main <- read_csv('rpn_crw.csv')
@@ -1989,11 +1986,17 @@ rpn_crw.main4
 ```
 
 <!-- #```{r} -->
+
 <!-- # Using ggplot -->
+
 <!-- #ggplot(data = rpn_crw.main4, aes(x = date, y = sst_max)) + -->
+
 <!-- #  geom_line() + -->
+
 <!-- #  geom_smooth(se = FALSE) + -->
+
 <!-- #  labs(y = "Temperature") %>% -->
+
 <!-- #  scale_x_datetime(date_breaks = "year", date_labels = "%b-%Y") -->
 
 <!-- #    geom_line(aes(y = dhw)) + -->
@@ -2001,10 +2004,13 @@ rpn_crw.main4
 <!--   scale_y_continuous( -->
 
 <!--     # Features of the first axis -->
+
 <!--     name = "Temperature", -->
 
 <!--     # Add a second axis and specify its features -->
+
 <!--     sec.axis = ggplot2::sec_axis(dhw) -->
+
 <!--   ) -->
 
 <!-- ``` -->
@@ -2014,7 +2020,6 @@ rpn_crw.main4
 iris$Species = paste(iris$Species, 
                      "random text to make the labels much much longer than the original labels")
 ```
-
 
 ```{r}
 rpn_crw.main.gg <- ggplot(data = rpn_crw.main4, aes(x = date, y = sst_max)) +
@@ -2069,7 +2074,6 @@ pkpd <- ggplot(data = rpn_crw.main4, aes(x = date, y = sst_max)) +
 
 print(pkpd)
 ```
-
 
 ```{r}
 #-----------------------------------------------------------------------------
@@ -2131,21 +2135,3 @@ head(my_data)
 ```{r}
 write_csv(rpn_crw, ".csv")
 ```
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
