commit and push, 1023, 7/20/2023

--- a/content/bleaching.qmd
+++ b/content/bleaching.qmd
@@ -137,6 +137,10 @@ letter_display <- cld(plob_mult)
 letter_display
 ```
 
+```{r}
+with(rpn_plob, interaction.plot(location, depth, cover))
+```
+
 # RPN PLOB Bleaching
 
 ```{r, include = FALSE}
